fixed hero image margin @ bottom so not overflowing w/ client section

--- a/style.css
+++ b/style.css
@@ -513,10 +513,10 @@ footer {
     content: '';
     display: block;
     width: 100%;
-    height: 50%;
+    height: 40%;
     transform-origin: left;
     left: 0px;
-    bottom: -100px;
+    bottom: -50px;
     background:var(--color-royalblue);
     transform: skewY(-3deg);
     z-index: -1;
@@ -526,15 +526,18 @@ footer {
   .hero__content{
     display: block;
 
+    /* max-height: 50%; */
 }
 
 
 
   .hero_test{
-    max-height: 400px;
+  
+    max-height: 300px;
     /* justify-content: center; */
     /* z-index: 111; */
-    margin: 0 auto;
+    margin: -2em auto;
+    /* margin-bottom: 4em; */
    }  
 
 
